src/styles/components/_title.css
.title {
  display: flex;
  justify-content: end;
  font-size: var(--font-title-min);
  writing-mode: vertical-rl;
  transform: rotate(180deg);
  color: var(--blue);
  position: relative;
  z-index: 1000;
  background-color: var(--background-color);
  height: 350px;

  @media screen and (min-width: 768px) {
    font-size: var(--font-display-min);
  }

  @media screen and (min-width: 1200px) {
    font-size: var(--font-display-max);
  }
}

.title-section {
  display: flex;
  flex-direction: column;
  width: 100%;
  overflow: hidden;

  .title-section__text {
    text-wrap: nowrap;
    display: flex;
    align-items: center;
    width: 100%;
    font-size: var(--font-title-mobile);
    font-family: var(--font-serif-light);
    font-weight: 400;
    line-height: 1;
    transform: translateY(140px) rotate(5deg);
    clip-path: inset(0 0 100% 0);

    @media screen and (min-width: 768px) {
      font-size: var(--font-title-min);
    }

    @media screen and (min-width: 1200px) {
      padding-inline: var(--spacing-xl);
      font-size: var(--font-title-max);
    }

    &:nth-child(even) {
      flex-direction: row-reverse;
      font-family: var(--font-serif-light-italic);
    }
  }
}

.title-section--no-spacing {
  padding-inline: 0;
}

